# mathnotes

./: .dockerignore  .flake8  .gitignore  .permalink-guide.md.swp  404.html  CLAUDE.md  CRAWLER_README.md  CSS_MIGRATION_GUIDE.md  DEBUGGING.md  DEMO-STANDARD.md  DEMO_INTEGRATION_PLAN.md  Dockerfile  Dockerfile.crawler  Dockerfile.dev  Dockerfile.node-dev  Dockerfile.playwright  Dockerfile.static  Dockerfile.static-dev  Dockerfile.test  Dockerfile.web  FLASKLESS.md  Gemfile  IDEAS.md  JS_DEMO_MODERNIZATION_PLAN.md  Makefile  PARSING.md  README-dev.md  README.md  REFACTOR-MATHBLOCKS-PLAN.md  STATIC_DEPLOYMENT.md  STYLE.md  TODO.md  _config.yml  about.markdown  app.py  docker-build.sh  docker-compose.dev-static.yml  docker-compose.dev.yml  docker-compose.static.yml  docker-compose.test.yml  (+38 more)
_includes/: head.html  header.html
_layouts/: home.html
_posts/: 2023-04-24-welcome-to-jekyll.markdown
algebra/: determinants.md  factoring.md  groups.md  partial-fractions.md  rings.md
calculus/: README.md  continuity.md  differentiation.md  fundamental.md  integration-strategies.md  integration.md  lengths areas and volumes.md  limits-of-a-function.md  limits.md  line-integrals.md  multivariable-differential-operators.md  polar-coordinates.md  real-numbers.md  sequences.md  series.md
cellular/: CLAUDE.md  cellular.html  cellular.js  elementary.html  elementary.js  game-of-life.md  gol.py
cellular automata/: cellular.js  elementary-cellular-automata.md  elementary.html  elementary.js  game-of-life.md
complex/: complex-functions.md  lesson 18 - complex numbers.md  limits.md  module 04 - limits.md  module 06 - harmonic.md  module 07 - zeros.md  module 08 - elementary functions.md  module 10 - contour integrals.md  module 11 - independence of path.md  module 12 - cauchy-goursat.md  module 13 - cauchy integral formula.md  module 20 - taylor and maclaurin series.md  module 21 - laurent series.md  module 22 - classification of singularities.md  module 3 - complex functions.md  module 5 - derivatives.md  module 6 - harmonic.md  module 8 - elementary functions.md  module 9 - indefinite integrals.md  regions-of-the-complex-plane.md
complex analysis/: module 01 - algebriac properties.md  module 02 - regions of the complex plane.md  module 03 - complex functions.md  module 04 - limits.md  module 05 - derivatives.md  module 06 - harmonic.md  module 07 - zeros.md  module 08 - elementary functions.md  module 09 - indefinite integrals.md  module 10 - contour integrals.md  module 11 - independence of path.md  module 12 - cauchy-goursat.md  module 13 - cauchy integral formula.md  module 20 - taylor and maclaurin series.md  module 21 - laurent series.md  module 22 - classification of singularities.md
crawler/: .dockerignore  README.md  crawl-demos.ts  crawler.ts  example-screenshot-crawler.ts  fx-probe.ts  package.json  tsconfig.json
demos/: test-demo.ts
diffeq/: credits.md  firstorderode.md  lesson 3 - the differential equation.md  lesson 4 - general solutions.md  lesson 5 - Direction Field.md  lesson 6 - meaning of the differential of a function and separable differential equations.md  lesson 7 - first order differential equation with homogenous coefficients.md
differential equations/: index.md
discrete math/: recurrence-relations.md
generator/: __init__.py  builder.py  renderer.py  router.py
graphics/: projection-and-homogenous-coordinates.md  projection.html  projection6.js
latex/: README.md  mathnotes-notation.sty  mathnotes.sty
linear algebra/: determinants.md  dotproduct.md  (+2 more)
(+759 files in other folders)
