[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mathnotes"
version = "1.0.0"
description = "A Flask application for serving mathematical notes with interactive demonstrations"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Jason Siefken"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Flask",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Education",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "Flask==3.0.0",
    "Markdown==3.5.1",
    "python-frontmatter==1.0.1",
    "gunicorn==21.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.1",
    "black>=23.7.0",
    "flake8>=6.1.0",
    "mypy>=1.5.0",
    "tox>=4.11.0",
    "pre-commit>=3.3.3",
]
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.1",
]

[project.urls]
Homepage = "https://lacunary.org"
Repository = "https://github.com/yourusername/mathnotes"

[tool.setuptools.packages.find]
where = ["."]
include = ["mathnotes*"]
exclude = ["test*", "tests*"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["test", "tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--cov=mathnotes",
    "--cov-branch",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["mathnotes"]
omit = [
    "*/tests/*",
    "*/test/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]
exclude = [".git", "__pycache__", "build", "dist", ".eggs", ".tox"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_optional = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "frontmatter",
    "markdown",
]
ignore_missing_imports = true

[tool.tox]
legacy_tox_ini = """
[tox]
min_version = 4.0
envlist = py311, lint, type
isolated_build = True

[testenv]
deps =
    pytest>=7.4.0
    pytest-cov>=4.1.0
    pytest-mock>=3.11.1
commands = pytest {posargs}

[testenv:lint]
deps =
    black>=23.7.0
    flake8>=6.1.0
commands =
    black --check mathnotes test
    flake8 mathnotes test

[testenv:type]
deps =
    mypy>=1.5.0
    types-Markdown
commands = mypy mathnotes

[testenv:format]
deps = black>=23.7.0
commands = black mathnotes test
"""